# token-router

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docker/: entrypoint.sh
evals/: find_remote_model.py  run_eval.py  scorers.py
evals/proxy/: classification.jsonl  extraction.jsonl  qa.jsonl  reasoning.jsonl  summarization.jsonl
tests/: test_accounting.py  test_agent.py  test_cli.py  test_fireworks.py  test_router.py
token_router/: __init__.py  accounting.py  agent.py  cli.py  pricing.py  prompts.py  router.py  tasks.py
token_router/models/: __init__.py  _http.py  base.py  fireworks.py  local.py  mock.py
